<resources>
    <string name="app_name">AstroWeather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="sun_data">"Sun Data: "</string>
    <string name="sunrise">"Sunrise: "</string>
    <string name="sunset">"Sunset: "</string>
    <string name="twilightE">"Evening Twilight: "</string>
    <string name="twilightM">"Morning Twilight: "</string>
    <string name="azimuth_rise">"Azimuth Rise: "</string>
    <string name="azimuth_set">"Azimuth Set: "</string>
    <string name="moon_data">"Moon data: "</string>
    <string name="moonrise">"Moonrise: "</string>
    <string name="moonset">"Moonset: "</string>
    <string name="new_moon">"Next new moon: "</string>
    <string name="full_moon">"Next full moon: "</string>
    <string name="illumination">"Illumination: "</string>
    <string name="age">"Age: "</string>
    <string name="location">"Location: "</string>
    <string name="current_time">"Current time: "</string>
    <string name="menu">Menu</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="save">Save</string>
    <string name="refresh_time">Refresh time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="phone_tag">phone_tag</string>
    <string name="tablet_tag">tablet_tag</string>
    <string name="weather_settings">Weather settings</string>
    <string name="astro_calculator_settings">Astro Calculator Settings</string>
    <string name="city">City:</string>
    <string name="inp_city">City</string>
    <string name="c"><sup>o</sup>C</string>
    <string name="f"><sup>o</sup>F</string>
    <string name="temperature_units">Temperature units</string>
    <string name="saveAndRefesh"><![CDATA[Save&Refresh]]></string>
    <string name="localization">Localization</string>
    <string name="temperature">"Temperature: "</string>
    <string name="pressure">"Pressure: "</string>
    <string name="place_holder">{place_holder}</string>
    <string name="wind_strength">"Wind strength: "</string>
    <string name="wind_direction">"Wind direction: "</string>
    <string name="humidity">"Humidity: "</string>
    <string name="visibility">"Visibility: "</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="weather">"Weather: "</string>
    <string name="connectionWarning">"Warning: Missing internet connection or city is invalid. Displayed data may be outdated or incorrect."</string>
    <string name="plus_minus">+/-</string>
</resources>