<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView style="?android:textAppearanceMedium"
            android:id="@+id/sunHeader"
            android:padding="16dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sun_data" />

        <TextView style="?android:textAppearanceMedium"
            android:id="@+id/sunrise"
            android:padding="16dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunrise" />

        <TextView style="?android:textAppearanceMedium"
            android:id="@+id/sunset"
            android:padding="16dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunset" />

        <TextView style="?android:textAppearanceMedium"
            android:id="@+id/civiltwilight"
            android:padding="16dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twilightE" />

        <TextView style="?android:textAppearanceMedium"
            android:id="@+id/civilmorningtwilight"
            android:padding="16dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twilightM" />

    </LinearLayout>
</ScrollView>